fixed some spacing errors

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -447,8 +447,8 @@ section.container { background-color: #fff; }
 }
 /*MOSAIC HOME*/
 .mosaic-section {
-    background: #0b2e1d;
-    padding: 80px 20px;
+    
+    padding: 0;
 }
 
 .mosaic-grid {
@@ -458,6 +458,7 @@ section.container { background-color: #fff; }
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 180px;
     gap: 10px;
+    
 }
 
 .mosaic-grid img {
@@ -483,10 +484,11 @@ section.container { background-color: #fff; }
 
 /*  MOBILE FULL WIDTH */
 @media (max-width: 768px) {
+
     .mosaic-grid {
         display: block;        
         width: 100%;           
-        padding: 0;           
+        padding: 15px;  /* ← spazio interno solo su mobile */
         margin: 0;             
         box-sizing: border-box;
     }
@@ -505,6 +507,7 @@ section.container { background-color: #fff; }
         overflow-x: hidden;    
     }
 }
+
  /* bottone bianco mosaic */
 .mosaic-cta-btn {
     display: inline-block;
@@ -527,3 +530,34 @@ section.container { background-color: #fff; }
     border-color: #fff;
     cursor: pointer;
 }
+
+@media (max-width: 768px) {
+
+    .carousel-img {
+        height: auto !important;
+        max-height: 70vh;
+        object-fit: contain !important;
+    }
+
+    /* centra correttamente l'immagine ed elimina spazio sotto */
+    #carouselExampleControlsNoTouching .carousel-item {
+        display: flex;
+        align-items: center;
+    }
+
+    /* caption mobile */
+    .carousel-caption {
+        padding: 1.5rem;
+    }
+
+    .carousel-caption h1 {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .carousel-caption h4 {
+        font-size: 1rem;
+    }
+}
+
+
